--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
             let isRotated = false; 
             let fitMode = "width"; 
             let isWideMode = false; 
+            let originalWidth, originalHeight;
 
             navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } })
                 .then(stream => {
@@ -144,7 +145,11 @@
                 const reader = new FileReader();
                 reader.onload = (e) => {
                     overlay.src = e.target.result;
-                    overlay.onload = () => updateOverlaySize();
+                    overlay.onload = () => {
+                        originalWidth = overlay.naturalWidth;
+                        originalHeight = overlay.naturalHeight;
+                        updateOverlaySize();
+                    };
                 };
                 reader.readAsDataURL(event.target.files[0]);
             });
@@ -152,12 +157,15 @@
             function updateOverlaySize() {
                 if (!overlay.src) return;
 
-                if (isRotated) {
-                    overlay.style.width = fitMode === "width" ? "auto" : "100%";
-                    overlay.style.height = fitMode === "width" ? "100%" : "auto";
+                let width = isRotated ? originalHeight : originalWidth;
+                let height = isRotated ? originalWidth : originalHeight;
+
+                if (fitMode === "width") {
+                    overlay.style.width = "100%";
+                    overlay.style.height = "auto";
                 } else {
-                    overlay.style.width = fitMode === "width" ? "100%" : "auto";
-                    overlay.style.height = fitMode === "width" ? "auto" : "100%";
+                    overlay.style.width = "auto";
+                    overlay.style.height = "100%";
                 }
             }
 
@@ -169,16 +177,9 @@
 
             rotateToggle.addEventListener("click", () => {
                 isRotated = !isRotated;
-
-                // ✅ 회전 시 width/height를 서로 바꾸는 로직 추가
-                if (isRotated) {
-                    overlay.style.transform = "translate(-50%, -50%) rotate(90deg)";
-                    fitMode = fitMode === "width" ? "height" : "width";
-                } else {
-                    overlay.style.transform = "translate(-50%, -50%) rotate(0deg)";
-                    fitMode = fitMode === "width" ? "height" : "width";
-                }
-
+                overlay.style.transform = isRotated 
+                    ? "translate(-50%, -50%) rotate(90deg)" 
+                    : "translate(-50%, -50%) rotate(0deg)";
                 updateOverlaySize();
             });
 
