--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 </head>
 <body>
 
+    <h1>성지순례 카메라</h1>
 
     <input type="range" id="opacitySlider" class="opacity-slider" min="0" max="1" step="0.05" value="0.5">
 
@@ -190,6 +191,23 @@
                 isWideMode = !isWideMode;
                 cameraContainer.classList.toggle("wide-mode", isWideMode);
                 aspectToggle.textContent = isWideMode ? "4:3" : "16:9";
+            });
+
+            // ✅ **촬영 기능 추가**
+            capture.addEventListener("click", () => {
+                const canvas = document.createElement("canvas");
+                const ctx = canvas.getContext("2d");
+
+                // 비디오 화면 크기에 맞게 캔버스 설정
+                canvas.width = video.videoWidth;
+                canvas.height = video.videoHeight;
+                ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+
+                // 이미지 다운로드 링크 생성
+                const link = document.createElement("a");
+                link.href = canvas.toDataURL("image/png");
+                link.download = "captured_image.png";
+                link.click();
             });
 
             updateOverlaySize();
