--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             transform: translate(-50%, -50%);
             opacity: 0.5;
             pointer-events: none;
-            transition: transform 0.3s ease, width 0.3s ease, height 0.3s ease, opacity 0.2s ease;
+            transition: transform 0.3s ease, width 0.3s ease, height 0.3s ease;
             z-index: 15;
         }
         .opacity-slider {
@@ -96,7 +96,6 @@
 
     <h1>성지순례 카메라</h1>
 
-    <!-- ✅ 오버레이 투명도 조절 슬라이더 -->
     <input type="range" id="opacitySlider" class="opacity-slider" min="0" max="1" step="0.05" value="0.5">
 
     <div class="container" id="cameraContainer">
@@ -181,9 +180,33 @@
                 aspectToggle.textContent = isWideMode ? "4:3" : "16:9";
             });
 
-            // ✅ 오버레이 이미지 투명도 조절 기능 추가
-            opacitySlider.addEventListener("input", () => {
-                overlay.style.opacity = opacitySlider.value;
+            // ✅ 촬영 후 iOS 공유 시트 실행
+            capture.addEventListener("click", () => {
+                const canvas = document.createElement("canvas");
+                const ctx = canvas.getContext("2d");
+
+                canvas.width = video.videoWidth;
+                canvas.height = video.videoHeight;
+                ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+
+                canvas.toBlob((blob) => {
+                    const file = new File([blob], "captured_image.png", { type: "image/png" });
+
+                    if (navigator.canShare && navigator.canShare({ files: [file] })) {
+                        navigator.share({
+                            files: [file],
+                            title: "촬영된 이미지",
+                            text: "성지순례 카메라로 촬영한 이미지입니다."
+                        }).catch((error) => console.error("공유 실패:", error));
+                    } else {
+                        const link = document.createElement("a");
+                        link.href = URL.createObjectURL(blob);
+                        link.download = "captured_image.png";
+                        document.body.appendChild(link);
+                        link.click();
+                        document.body.removeChild(link);
+                    }
+                }, "image/png");
             });
 
             updateOverlaySize();
