--- a/index.html
+++ b/index.html
@@ -152,7 +152,22 @@
             });
 
             function updateOverlayImage() {
-                overlay.src = originalImage.src;
+                const canvas = document.createElement("canvas");
+                const ctx = canvas.getContext("2d");
+
+                if (isRotated) {
+                    canvas.width = originalImage.height;
+                    canvas.height = originalImage.width;
+                    ctx.translate(canvas.width / 2, canvas.height / 2);
+                    ctx.rotate(Math.PI / 2);
+                    ctx.drawImage(originalImage, -originalImage.width / 2, -originalImage.height / 2);
+                } else {
+                    canvas.width = originalImage.width;
+                    canvas.height = originalImage.height;
+                    ctx.drawImage(originalImage, 0, 0);
+                }
+
+                overlay.src = canvas.toDataURL();
                 updateOverlaySize();
             }
 
@@ -169,9 +184,7 @@
 
             rotateToggle.addEventListener("click", () => {
                 isRotated = !isRotated;
-                overlay.style.transform = isRotated 
-                    ? "translate(-50%, -50%) rotate(90deg)" 
-                    : "translate(-50%, -50%) rotate(0deg)";
+                updateOverlayImage();
             });
 
             aspectToggle.addEventListener("click", () => {
@@ -180,33 +193,21 @@
                 aspectToggle.textContent = isWideMode ? "4:3" : "16:9";
             });
 
-            // ✅ 촬영 후 iOS 공유 시트 실행
+            // ✅ **촬영 기능 추가**
             capture.addEventListener("click", () => {
                 const canvas = document.createElement("canvas");
                 const ctx = canvas.getContext("2d");
 
+                // 비디오 화면 크기에 맞게 캔버스 설정
                 canvas.width = video.videoWidth;
                 canvas.height = video.videoHeight;
                 ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
 
-                canvas.toBlob((blob) => {
-                    const file = new File([blob], "captured_image.png", { type: "image/png" });
-
-                    if (navigator.canShare && navigator.canShare({ files: [file] })) {
-                        navigator.share({
-                            files: [file],
-                            title: "촬영된 이미지",
-                            text: "성지순례 카메라로 촬영한 이미지입니다."
-                        }).catch((error) => console.error("공유 실패:", error));
-                    } else {
-                        const link = document.createElement("a");
-                        link.href = URL.createObjectURL(blob);
-                        link.download = "captured_image.png";
-                        document.body.appendChild(link);
-                        link.click();
-                        document.body.removeChild(link);
-                    }
-                }, "image/png");
+                // 이미지 다운로드 링크 생성
+                const link = document.createElement("a");
+                link.href = canvas.toDataURL("image/png");
+                link.download = "captured_image.png";
+                link.click();
             });
 
             updateOverlaySize();
