--- a/index.html
+++ b/index.html
@@ -115,6 +115,12 @@
     <input type="file" id="upload" accept="image/*" class="hidden-input">
 
     <script>
+	
+		opacitySlider.addEventListener("input", () => {
+		overlay.style.opacity = opacitySlider.value;
+		});
+
+	
         document.addEventListener("DOMContentLoaded", () => {
             const video = document.getElementById("camera");
             const overlay = document.getElementById("overlay");
