--- a/index.html
+++ b/index.html
@@ -119,7 +119,20 @@
 		opacitySlider.addEventListener("input", () => {
 		overlay.style.opacity = opacitySlider.value;
 		});
+		//누락된 이벤트 리스너 추가했음
 
+	    let updatePending = false;
+
+opacitySlider.addEventListener("input", () => {
+    if (!updatePending) {
+        updatePending = true;
+        requestAnimationFrame(() => {
+            overlay.style.opacity = opacitySlider.value;
+            updatePending = false;
+        });
+    }
+});
+// 슬라이더 반응속도 조정
 	
         document.addEventListener("DOMContentLoaded", () => {
             const video = document.getElementById("camera");
