--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             transition: all 0.3s ease;
             z-index: 10;
             background: black;
+            position: relative; /* 추가 */
         }
         .wide-mode {
             aspect-ratio: 9 / 16 !important;
@@ -54,8 +55,8 @@
             z-index: 15;
         }
         .opacity-slider {
-            position: fixed;
-            top: 10px;
+            position: absolute; /* fixed에서 absolute로 변경 */
+            top: 10px; /* 카메라 내부 상단 */
             left: 50%;
             transform: translateX(-50%);
             width: 200px;
@@ -94,11 +95,8 @@
 </head>
 <body>
 
-    <h1>성지순례 카메라</h1>
-
-    <input type="range" id="opacitySlider" class="opacity-slider" min="0" max="1" step="0.05" value="0.5">
-
     <div class="container" id="cameraContainer">
+        <input type="range" id="opacitySlider" class="opacity-slider" min="0" max="1" step="0.05" value="0.5">
         <video id="camera" autoplay playsinline></video>
         <img id="overlay" src="" alt="Overlay Image">
         <div class="controls">
@@ -115,26 +113,18 @@
     <input type="file" id="upload" accept="image/*" class="hidden-input">
 
     <script>
-	
-		opacitySlider.addEventListener("input", () => {
-		overlay.style.opacity = opacitySlider.value;
-		});
-		//누락된 이벤트 리스너 추가했음
+        let updatePending = false;
 
-let updatePending = false;
+        opacitySlider.addEventListener("input", () => {
+            if (!updatePending) {
+                updatePending = true;
+                requestAnimationFrame(() => {
+                    overlay.style.opacity = opacitySlider.value;
+                    updatePending = false;
+                });
+            }
+        }, { passive: true });
 
-opacitySlider.addEventListener("input", () => {
-    if (!updatePending) {
-        updatePending = true;
-        requestAnimationFrame(() => {
-            overlay.style.opacity = opacitySlider.value;
-            updatePending = false;
-        });
-    }
-}, { passive: true });
-
-// 슬라이더 반응속도 조정
-	
         document.addEventListener("DOMContentLoaded", () => {
             const video = document.getElementById("camera");
             const overlay = document.getElementById("overlay");
@@ -144,7 +134,6 @@ opacitySlider.addEventListener("input", () => {
             const rotateToggle = document.getElementById("rotateToggle");
             const capture = document.getElementById("capture");
             const aspectToggle = document.getElementById("aspectToggle");
-            const opacitySlider = document.getElementById("opacitySlider");
             const cameraContainer = document.getElementById("cameraContainer");
 
             let isRotated = false; 
@@ -213,17 +202,14 @@ opacitySlider.addEventListener("input", () => {
                 aspectToggle.textContent = isWideMode ? "4:3" : "16:9";
             });
 
-            // ✅ **촬영 기능 추가**
             capture.addEventListener("click", () => {
                 const canvas = document.createElement("canvas");
                 const ctx = canvas.getContext("2d");
 
-                // 비디오 화면 크기에 맞게 캔버스 설정
                 canvas.width = video.videoWidth;
                 canvas.height = video.videoHeight;
                 ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
 
-                // 이미지 다운로드 링크 생성
                 const link = document.createElement("a");
                 link.href = canvas.toDataURL("image/png");
                 link.download = "captured_image.png";
