--- a/index.html
+++ b/index.html
@@ -25,17 +25,22 @@
             transform: translate(-50%, -50%);
             width: 90vw;
             max-width: 400px;
-            aspect-ratio: 3 / 4;
+            height: 120vw; /* 기존 aspect-ratio를 대체 */
+            max-height: 533px; /* 4:3 비율 유지 */
             overflow: hidden;
             border: 2px solid white;
             border-radius: 10px;
             transition: all 0.3s ease;
             z-index: 10;
             background: black;
-            position: relative; /* 추가 */
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
         .wide-mode {
-            aspect-ratio: 9 / 16 !important;
+            height: 160vw !important; /* 16:9 비율 */
+            max-height: 711px;
         }
         video {
             position: absolute;
@@ -55,16 +60,16 @@
             z-index: 15;
         }
         .opacity-slider {
-            position: absolute; /* fixed에서 absolute로 변경 */
-            top: 10px; /* 카메라 내부 상단 */
+            position: absolute;
+            top: 5%;
             left: 50%;
             transform: translateX(-50%);
-            width: 200px;
+            width: 80%;
             z-index: 30;
         }
         .controls {
-            position: fixed;
-            bottom: 15px;
+            position: absolute;
+            bottom: 5%;
             left: 50%;
             transform: translateX(-50%);
             display: flex;
