--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             transform: translate(-50%, -50%);
             width: 90vw;
             max-width: 400px;
-            height: 120vw; /* 기존 aspect-ratio를 대체 */
-            max-height: 533px; /* 4:3 비율 유지 */
+            height: 120vw;
+            max-height: 533px;
             overflow: hidden;
             border: 2px solid white;
             border-radius: 10px;
@@ -39,7 +39,7 @@
             align-items: center;
         }
         .wide-mode {
-            height: 160vw !important; /* 16:9 비율 */
+            height: 160vw !important;
             max-height: 711px;
         }
         video {
@@ -165,6 +165,32 @@
                 reader.readAsDataURL(event.target.files[0]);
             });
 
+            function isIOS() {
+                return /iPhone|iPad|iPod/i.test(navigator.userAgent);
+            }
+
+            capture.addEventListener("click", () => {
+                const canvas = document.createElement("canvas");
+                const ctx = canvas.getContext("2d");
+
+                canvas.width = video.videoWidth;
+                canvas.height = video.videoHeight;
+                ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+
+                const imageData = canvas.toDataURL("image/png");
+
+                if (isIOS() && window.webkit && window.webkit.messageHandlers) {
+                    window.webkit.messageHandlers.saveImage.postMessage(imageData);
+                } else {
+                    const link = document.createElement("a");
+                    link.href = imageData;
+                    link.download = "captured_image.png";
+                    document.body.appendChild(link);
+                    link.click();
+                    document.body.removeChild(link);
+                }
+            });
+
             function updateOverlayImage() {
                 const canvas = document.createElement("canvas");
                 const ctx = canvas.getContext("2d");
@@ -206,38 +232,6 @@
                 cameraContainer.classList.toggle("wide-mode", isWideMode);
                 aspectToggle.textContent = isWideMode ? "4:3" : "16:9";
             });
-
-capture.addEventListener("click", () => {
-    const canvas = document.createElement("canvas");
-    const ctx = canvas.getContext("2d");
-
-    // 비디오 화면 크기에 맞게 캔버스 설정
-    canvas.width = video.videoWidth;
-    canvas.height = video.videoHeight;
-    ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-
-    // 이미지 데이터 URL 생성
-    const imageData = canvas.toDataURL("image/png");
-
-    // iOS 기기인지 확인
-    function isIOS() {
-        return /iPhone|iPad|iPod/i.test(navigator.userAgent);
-    }
-
-    if (isIOS() && window.webkit && window.webkit.messageHandlers) {
-        // iOS 갤러리 저장 (WebKit 인터페이스가 존재하는 경우)
-        window.webkit.messageHandlers.saveImage.postMessage(imageData);
-    } else {
-        // 일반적인 다운로드 방식 (iOS가 아닐 경우)
-        const link = document.createElement("a");
-        link.href = imageData;
-        link.download = "captured_image.png";
-        document.body.appendChild(link);
-        link.click();
-        document.body.removeChild(link);
-    }
-});
-
 
             updateOverlaySize();
         });
